# -cpp-server-route-api-operator-driver-licenses

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: checkbuild.yml  master.yml
include/operator/driver/licenses/post/: context.hpp  handler.hpp
include/operator/driver/licenses/post/accessor/: configuration.hpp
include/operator/driver/licenses/post/database/: license_driver_registerer.hpp
include/operator/driver/licenses/post/details/: data_checker.hpp  granter.hpp
src/: handler.cpp  plugin.cpp
